package org.example;

public enum EstadoCasillero {
    VACIO,
    OCUPADO,
    FUERA_DE_SERVICIO
}