package org.example;

public enum EstadoPedido {
    NUEVO,
    PREPARADO,
    EN_TRANSITO,
    ENTREGADO,
    VERIFICADO,
    FALLIDO
}
